--- a/onlineadmin/package.json
+++ b/onlineadmin/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
+    "mongoose": "^8.16.2",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
